--- a/frontend/src/Components/HomePage.css
+++ b/frontend/src/Components/HomePage.css
@@ -4,6 +4,7 @@
     font-size: 10px;
     color: #3D4F9F;
     text-transform: uppercase;
+    letter-spacing: .2em;
 }
 
 .generic-headline {
@@ -12,4 +13,12 @@
     font-size: 48px;
     color: #3D4F9F;
     text-transform: capitalize;
+}
+
+.generic-text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    color: #8D96BD;
+    margin: 20px 0px 30px 0px
 }
