--- a/frontend/src/Components/ContactPage.css
+++ b/frontend/src/Components/ContactPage.css
@@ -11,8 +11,10 @@
     border-bottom: 2px solid #5889D6;
     display: inline;
     padding-bottom: 5px;
+
 }
 
 .contact-page .contact-section {
-    margin-top: 160px;
+    margin-top: 100px;
+    margin-bottom: 200px;
 }
