--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -1,3 +1,7 @@
+ .custom-navbar {
+     background-color: #FFFFFF;
+ }
+
  .custom-navbar .container-fluid {
      display: flex;
      justify-content: space-between;
@@ -124,11 +128,11 @@
 
      .custom-navbar-mobile .custom-nav-links-mobile li a:hover,
      .custom-navbar .custom-nav-links li a:hover {
-         border-bottom: 2px solid white;
+         border-bottom: 2px solid lightgray;
      }
 
      .active {
-         border-bottom: 2px solid white;
+         border-bottom: 2px solid lightgray;
      }
 
      .hamburger-menu {
@@ -145,6 +149,9 @@
          margin-left: 0px
      }
 
+     .footer-middle-container ul.custom-footer-links a:hover {
+         border-bottom: 2px solid lightgray !important;
+     }
  }
 
 
